# DeFiArbitraje

./: README.md
DeFiArbitraje/: Cargo.toml  README.md
DeFiArbitraje/config/: defi_config.json
DeFiArbitraje/evm-arb-service/: Cargo.toml
DeFiArbitraje/evm-arb-service/abis/: Executor.json  SolidlyPair.json  UniswapV2Pair.json  UniswapV3Pool.json
DeFiArbitraje/evm-arb-service/src/: approvals.rs  calldata.rs  config.rs  dex.rs  error.rs  exec.rs  main.rs  metrics.rs  mev.rs  network.rs  route.rs  router.rs  utils.rs  utils_gas.rs
DeFiArbitraje/evm-arb-service/tests/: price_math.rs  route_builder.rs
DeFiArbitraje/onchain-executor/: README.md  foundry.toml
DeFiArbitraje/onchain-executor/abi/: Executor.abi.json
DeFiArbitraje/onchain-executor/contracts/: Executor.sol
DeFiArbitraje/onchain-executor/contracts/interfaces/: IERC20.sol  IPermit2.sol  IQuoterV2.sol  ISolidlyPair.sol  ISolidlyRouter.sol  IUniswapV2Router02.sol  IUniswapV3SwapRouter.sol
DeFiArbitraje/onchain-executor/contracts/libraries/: ReentrancyGuard.sol  SafeTransferLib.sol
DeFiArbitraje/onchain-executor/hardhat/: hardhat.config.ts  package.json
DeFiArbitraje/onchain-executor/hardhat/scripts/: deploy.ts
DeFiArbitraje/onchain-executor/script/: Deploy.s.sol
DeFiArbitraje/pool-discovery-cli/: Cargo.toml  README.md
DeFiArbitraje/pool-discovery-cli/abis/: SolidlyFactory.json  UniswapV2Factory.json  UniswapV2Pair.json  UniswapV3Factory.json  UniswapV3Pool.json
DeFiArbitraje/pool-discovery-cli/src/: config.rs  discover.rs  main.rs
