[workspace]
members = ["evm-arb-service", "pool-discovery-cli"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
