[package]
name = "DeFiArbitraje"
version = "1.6.0"
edition = "2024"

[dependencies]

anyhow = "1.0.99"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_with = "3.14.0"
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
ethers = { version = "2.0.14", default-features = false, features = ["abigen", "rustls", "ws"] }
prometheus = "0.13"
hyper = { version = "0.14.32", features = ["server", "http1", "tcp"] }
hex = "0.4.3"
rand = "0.9.2"
lazy_static = "1.5.0"
itertools = "0.14.0"
futures = "0.3"
flate2 = "1.1.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5.4"

[dev-dependencies]
pretty_assertions = "1.4.1"